@@ -1,5 +1,7 @@
 Changes in version 1.5.1 (??.?? 2009)
 
+ - IVideoDriver::makeColorKeyTexture() bug fixed so that only alphas, not whole texel colors, are zeroed.  An optional parameter allows using the old (buggy) behaviour for backwards compatibility.
+
  - MD2 mesh loader: Now uses much less memory, reduced number of allocations when loading meshes.
 
 Changes in version 1.5 (15.12.2008)
